--- a/views/partials/Admin/gestcoms.hbs
+++ b/views/partials/Admin/gestcoms.hbs
@@ -35,7 +35,7 @@ Partial : Admin/ Gestion commentaires
                     <div class="row">
                         <div class="col-md-12">
                             <div class="client-profil position-relative">
-                                <cite> <img src="assets/images/julia.jpg"> Anonyme</cite>
+                                <cite> <img src="/assets/images/julia.jpg"> Anonyme</cite>
                                 <button type="button" class=" btn like position-absolute top-0 end-0 like"><i
                                         class="fas fa-heart">
                                         1</i> </button>
@@ -60,7 +60,7 @@ Partial : Admin/ Gestion commentaires
 
                         <div class="col-md-12">
                             <div class="client-profil position-relative">
-                                <cite> <img src="assets/images/emilie.jpg"> Anonyme</cite>
+                                <cite> <img src="/assets/images/emilie.jpg"> Anonyme</cite>
                                 <button type="button" class=" btn like position-absolute top-0 end-0 like"><i
                                         class="fas fa-heart">
                                         1</i> </button>
@@ -82,7 +82,7 @@ Partial : Admin/ Gestion commentaires
                         </div>
                         <div class="col-md-12">
                             <div class="client-profil position-relative">
-                                <cite> <img src="assets/images/blaise.jpg"> Anonyme</cite>
+                                <cite> <img src="/assets/images/blaise.jpg"> Anonyme</cite>
                                 <button type="button" class=" btn like position-absolute top-0 end-0 like"><i
                                         class="fas fa-heart">
                                         1</i> </button>
