--- a/views/partials/Admin/gestpics.hbs
+++ b/views/partials/Admin/gestpics.hbs
@@ -21,7 +21,7 @@ Partial : Admin/ Gestion photos
             <div class="row">
                 <div class="col-md-4">
                     <div class="galeries-img position-relative"
-                        style="background-image: url(assets/css/mtfcolor1.jpg);">
+                        style="background-image: url(/assets/css/mtfcolor1.jpg);">
                         <div class="text-white">
                             <p class="fst-italic text-white position-absolute bottom-0 end-0"><i
                                     class="fas fa-camera"></i>
@@ -37,7 +37,7 @@ Partial : Admin/ Gestion photos
                 <div class="col-md-4">
 
                     <div class="galeries-img position-relative"
-                        style="background-image: url(assets/css/mtfcolor2.jpg);">
+                        style="background-image: url(/assets/css/mtfcolor2.jpg);">
                         <div class="text-white">
                             <p class="fst-italic text-white position-absolute bottom-0 end-0"><i
                                     class="fas fa-camera"></i>
@@ -83,7 +83,7 @@ Partial : Admin/ Gestion photos
 
                 <div class="col-md-4">
                     <div class="galeries-img position-relative"
-                        style="background-image: url(assets/css/mtfcolor1.jpg);">
+                        style="background-image: url(/assets/css/mtfcolor1.jpg);">
                         <div class="text-white">
                             <p class="fst-italic text-white position-absolute bottom-0 end-0"><i
                                     class="fas fa-camera"></i>
