--- a/views/partials/Admin/gestuser.hbs
+++ b/views/partials/Admin/gestuser.hbs
@@ -27,7 +27,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th><img class="img-user" src="assets/images/julia.jpg"> </th>
+                        <th><img class="img-user" src="/assets/images/julia.jpg"> </th>
                         <td>user name</td>
                         <td>Name</td>
                         <td>@mail.com</td>
@@ -39,7 +39,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th><img class="img-user" src="assets/images/emilie.jpg"> </th>
+                        <th><img class="img-user" src="/assets/images/emilie.jpg"> </th>
                         <td>user name</td>
                         <td>Name</td>
                         <td>@mail.com</td>
@@ -50,7 +50,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th><img class="img-user" src="assets/images/blaise.jpg"> </th>
+                        <th><img class="img-user" src="/assets/images/blaise.jpg"> </th>
                         <td>user name</td>
                         <td>Name</td>
                         <td>@mail.com</td>
