--- a/views/partials/blogid/coms/coms.hbs
+++ b/views/partials/blogid/coms/coms.hbs
@@ -58,9 +58,9 @@ Partial : Id/Commentaires
 
         </div>
 
-        {{> id/coms/addcoms }}
+        {{> blogid/coms/addcoms }}
         
-        {{> id/coms/editcoms }}
+        {{> blogid/coms/editcoms }}
     
     </div>
 </section>
