--- a/views/partials/modals/modalLogin.hbs
+++ b/views/partials/modals/modalLogin.hbs
@@ -11,7 +11,7 @@
                 <button type="submit" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/" method="post">
+                <form action="/login" method="post">
                     <div class="container">
                         <div class="mb-3">
                             <label for="loginEmail" class="form-label">Adresse Mail</label>
