--- a/views/partials/modals/modalLostpass.hbs
+++ b/views/partials/modals/modalLostpass.hbs
@@ -10,7 +10,7 @@ Modal / navbar : Lost password
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/" method="post">
+                <form action="/lostpassword" method="post">
                     <div class="mb-3">
 
                         <p class="fst-italic"> Nous vous enverrons le mail de réinitialisation</p>
