--- a/views/partials/blogid/coms/addcoms.hbs
+++ b/views/partials/blogid/coms/addcoms.hbs
@@ -1,10 +1,10 @@
 {{!--
-Partial : Id/Comms/edit coms
+Partial : Id/Comms/Add coms
 --}}
 <!---Ajouter un commentaires--->
 <div class="col-md-12 bg-com">
-    <h5 class="text-center">Editer un commentaire</h5>
-    <form action="/blog-id/?_method=PUT" method="post">
+    <h5 class="text-center">Ajouter un commentaire</h5>
+    <form action="/blog-id" method="post">
         <div class="input-group">
             <span class="input-group-text" id="inputGroupPrepend2">@</span>
             <input name="user" type="text" class="form-control" placeholder="Nom d'utilisateur"
@@ -12,17 +12,18 @@ Partial : Id/Comms/edit coms
         </div>
         <label> Votre commentaire:</label>
         <div class="contact-form">
-            <textarea name="editmessagecom" rows="3" class="contact-message"> </textarea>
+            <textarea name="messagecom" rows="3" class="contact-message"> </textarea>
         </div>
 
         <!--- Bouton- -->
         <div class="row">
             <div class="col-md-12">
                 <div class="contact-form -grid gap-2 d-md-flex justify-content-md-center ">
-                    <button type="submit" class="btn btn-contact">Editer</button>
+                    <button type="submit" class="btn btn-contact">Envoyer</button>
                 </div>
 
             </div>
         </div>
     </form>
+
 </div>
