--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,12 +10,13 @@ Page type:Partial Footer /
         <div class="copyright">
 
             <div class="col-md-12">
-                <div class="contact-form">
-                    <label>Newsletter:</label>
-                    <input type="email" id="email" placeholder="Ajouter votre email" />
-                    <button class="btn btn-contact">S'inscrire</button>
-
-                </div>
+                <form action="/newsletter" method="post">
+                    <div class="contact-form">
+                        <label>Newsletter:</label>
+                        <input name="EmailNwslter" type="email" id="email" placeholder="Ajouter votre email" />
+                        <button type="submit" class="btn btn-contact">S'inscrire</button>
+                    </div>
+                </form>
             </div>
 
             <div class="col-md-12 socials">
