--- a/views/partials/modals/modalgestuser.hbs
+++ b/views/partials/modals/modalgestuser.hbs
@@ -1,6 +1,6 @@
-{{!-- 
-    Modal / Admin : Gestion user
- --}}
+{{!--
+Modal / Admin : Gestion user
+--}}
 
 
 <!---------------------------- Modal users ------------------------------->
@@ -12,45 +12,51 @@
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <form class="row g-3">
-                    <div class="col-md-12">
-                        <div class="mb-3">
-                            <label for="formFile" class="form-label">Photo
-                                de Profil</label>
-                            <input class="form-control" type="file" id="formFile">
+            <form action="/admin?_method=PUT" method="post">
+                <div class="modal-body">
+                    <div class="row g-3">
+                        <div class="col-md-12">
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">Photo
+                                    de Profil</label>
+                                <input name="file" class="form-control" type="file" id="formFile">
+                            </div>
+                            <img class="img-user" src="assets/images/emilie.jpg">
                         </div>
-                        <img class="img-user" src="assets/images/emilie.jpg">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="validationDefault02" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="validationDefault02" value="..." required>
-                    </div>
-
-
-                    <div class="col-md-12">
-                        <label for="FormControlInput1" class="form-label">Email
-                            address</label>
-                        <input type="email" class="form-control" id="eFormControlInput1" placeholder="name@example.com">
-                    </div>
-                    <div class="col-md-12">
-                        <label for="validationDefaultUsername" class="form-label">Username</label>
-                        <div class="input-group">
-                            <span class="input-group-text" id="inputGroupPrepend2">@</span>
-                            <input type="text" class="form-control" id="validationDefaultUsername"
-                                aria-describedby="inputGroupPrepend2" required>
+                        <div class="col-md-6">
+                            <label for="validationDefault02" class="form-label">Name</label>
+                            <input name="name" type="text" class="form-control" id="validationDefault02" value="..."
+                                required>
                         </div>
+
+
+                        <div class="col-md-12">
+                            <label for="FormControlInput1" class="form-label">Email
+                                address</label>
+                            <input name="email" type="email" class="form-control" id="eFormControlInput1"
+                                placeholder="name@example.com">
+                        </div>
+                        <div class="col-md-12">
+                            <label for="validationDefaultUsername" class="form-label">Username</label>
+                            <div class="input-group">
+                                <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                                <input name="user" type="text" class="form-control" id="validationDefaultUsername"
+                                    aria-describedby="inputGroupPrepend2" required>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger">Banned</button>
+
+                        <button type="submit" class="btn btn-primary">Save
+                            changes</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
                     </div>
 
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger">Banned</button>
-
-                <button type="button" class="btn btn-primary">Save
-                    changes</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
-</div>
