--- a/views/partials/modals/modalsupprcoms.hbs
+++ b/views/partials/modals/modalsupprcoms.hbs
@@ -16,8 +16,8 @@ Modal / Admin : Suppr coms
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger">Delete
-                </button>
+                <form  action="/admin/?_method=DELETE" method="post"><button name="DeleteCom?" type="submit" class="btn btn-danger">Delete
+                    </button> </form>
             </div>
         </div>
     </div>
