--- a/views/partials/modals/modaleditcard.hbs
+++ b/views/partials/modals/modaleditcard.hbs
@@ -3,14 +3,14 @@ Modal / Admin : Gestion card
 --}}
 
 <!-------------------------- Modal add cards ------------------------------->
-<div class="modal fade dark" id="addcardModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+<div class="modal fade dark" id="editcardModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="ModalLab"> Edit Card</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form action="/admin" method="post">
+            <form action="/admin/{{this.id}}?_method=PUT" method="post">
                 <div class="modal-body">
 
                     <div class="col-md-12">
