--- a/views/partials/navbar/navbar.hbs
+++ b/views/partials/navbar/navbar.hbs
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="/contact">Nous contacter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Admin">Admin</a>
+                        <a class="nav-link" href="/admin">Admin</a>
                     </li>
                 </ul>
 
