--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -6,7 +6,7 @@ Partial : blog/Cards
     <div class="container-fluid">
         <div class="row" id="listCard">
 
-            {{#each dbBlog }}
+            {{#each dbBlog2 }}
 
             <div class="col-md-4">
                 <div class="famille-details card">
