--- a/views/partials/register/newuser.hbs
+++ b/views/partials/register/newuser.hbs
@@ -13,12 +13,12 @@ Partial : register/ New user
             <div class="row">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Photo de Profil</label>
-                    <input name="ImgMulter" type="file" class="form-control"  id="formFile" required>
+                    <input name="ImgMulter" type="file" class="form-control"  id="formFile" multiple>
                 </div>
 
                 <div class="col-md-6">
                     <label class="form-label">Prénom:</label>
-                    <input name="FirstName" type="text" class="form-control" value="..." required>
+                    <input name="FirstName" type="text" class="form-control" value="...">
                 </div>
                 <div class="col-md-6">
                     <label class="form-label">Nom:</label>
