--- a/views/partials/modals/modaladdpics.hbs
+++ b/views/partials/modals/modaladdpics.hbs
@@ -11,7 +11,7 @@ Modal / Admin : Gestion photos
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form action="/admin" method="post">
+            <form action="/admin" method="post" enctype="multipart/form-data">
                 <div class="modal-body">
 
                     <div class="col-md-12">
@@ -20,7 +20,7 @@ Modal / Admin : Gestion photos
                     </div>
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Photo</label>
-                        <input name="Pic" class="form-control" type="file" id="formFile">
+                        <input name="ImgMulter" class="form-control" type="file" id="formFile">
 
                     </div>
                 </div>
