--- a/views/partials/modals/modalsupprpics.hbs
+++ b/views/partials/modals/modalsupprpics.hbs
@@ -16,7 +16,7 @@ Modal / Admin : suppr photos
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <form action="/admin/?_method=DELETE" method="post"><button name="DeletePic?" type="submit"
+                <form action="/admin?_method=DELETE" method="post"><button name="DeletePic?" type="submit"
                         class="btn btn-danger">Delete
                     </button> </form>
             </div>
